--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^8.2.12",
     "jszip": "^3.1.5",
+    "moment": "^2.24.0",
     "ngx-dropzone": "^2.2.2",
     "ngx-embed-video": "^1.0.4",
     "ngx-order-pipe": "^2.0.4",
